::-webkit-scrollbar fixed

--- a/business-logic/tw_pc_template/scss/_reset.scss
+++ b/business-logic/tw_pc_template/scss/_reset.scss
@@ -28,7 +28,8 @@ html {
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
-  text-size-adjust: 100%; /* 2 */
+  -moz-text-size-adjust: 100%;
+       text-size-adjust: 100%; /* 2 */
 }
 
 /* Sections
@@ -107,10 +108,10 @@ i {
  in mobile
 */
 
-::-webkit-scrollbar {
-  display: none;
-  opacity: 0;
-}
+// ::-webkit-scrollbar {
+//   display: none;
+//   opacity: 0;
+// }
 
 /**
  * Correct the font size and margin on `h1` elements within `section` and
@@ -131,8 +132,6 @@ h1 {
  */
 
 hr {
-  -webkit-box-sizing: content-box;
-  -moz-box-sizing: content-box;
   box-sizing: content-box; /* 1 */
   height: 0; /* 1 */
   overflow: visible; /* 2 */
@@ -170,7 +169,6 @@ abbr[title] {
   border-bottom: none; /* 1 */
   text-decoration: underline; /* 2 */
   -webkit-text-decoration: underline dotted;
-  -moz-text-decoration: underline dotted;
   text-decoration: underline dotted; /* 2 */
 }
 
@@ -287,7 +285,9 @@ textarea {
   margin: 0; /* 2 */
   border: 0;
   outline: 0;
-  appearance: none;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
 }
 
 select {
@@ -371,8 +371,6 @@ fieldset {
   */
 
 legend {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box; /* 1 */
   color: inherit; /* 2 */
   display: table; /* 1 */
@@ -404,8 +402,6 @@ textarea {
 
 [type="checkbox"],
 [type="radio"] {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box; /* 1 */
   padding: 0; /* 2 */
 }
@@ -426,7 +422,8 @@ textarea {
 
 [type="search"] {
   -webkit-appearance: textfield; /* 1 */
-  appearance: textfield;
+  -moz-appearance: textfield;
+       appearance: textfield;
   outline-offset: -2px; /* 2 */
 }
 
